objects/ConfiguratorApprovalMatrix__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <defaultValue>&quot;Configurator&quot;</defaultValue>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Configurator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Configurator_Approval_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Number__c</fullName>
        <label>PT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Fab__c</columns>
        <columns>PT_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FAB2</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Fab__c</columns>
        <columns>PT_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 2</value>
        </filters>
        <label>FAB2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FAB3</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Fab__c</columns>
        <columns>PT_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 3</value>
        </filters>
        <label>FAB3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FAB_3E</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Fab__c</columns>
        <columns>PT_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 3E</value>
        </filters>
        <label>FAB 3E</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FAB_5</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Fab__c</columns>
        <columns>PT_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 5</value>
        </filters>
        <label>FAB 5</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FAB_7</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Fab__c</columns>
        <columns>PT_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fab__c</field>
            <operation>equals</operation>
            <value>FAB 7</value>
        </filters>
        <label>FAB 7</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CAM-{0000}</displayFormat>
        <label>Approval Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>